--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,17 @@
-{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"ats-maximum","configurations":{"web":"1:726594415074:web:177a3802d7a019524871bb"}}}}}}
+{
+  "firestore": {
+    "rules": "firestore.rules"
+  },
+  "flutter": {
+    "platforms": {
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "ats-maximum",
+          "configurations": {
+            "web": "1:726594415074:web:177a3802d7a019524871bb"
+          }
+        }
+      }
+    }
+  }
+}
