App Icon Generated!
App Icon Generated!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  
+  # App Icon Generator
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -142,3 +145,14 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# Flutter Launcher Icons Configuration
+flutter_launcher_icons:
+  android: false
+  ios: false
+  web:
+    generate: true
+    image_path: "assets/images/logo/app_icon.png"
+    background_color: "#ffffff"
+    theme_color: "#0175C2"
+  image_path: "assets/images/logo/app_icon.png"
