--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "ats",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
+    "background_color": "#ffffff",
     "theme_color": "#0175C2",
     "description": "ATS is a Flutter Web App Project",
     "orientation": "portrait-primary",
